--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-family: "Times New Roman";
 }
 
 .header {
